fixed contrast tier 1

--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,7 @@ input {
 }
 
 .tier1 {
-    color: #55be58;
+    color: #48a04b;
 }
 
 .tier2 {
